---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-06-24
  Changes:
    - Construction planner tool highlights and counts affected (unapproved) ghosts instead of placeholder ghosts. Works with both approval and unapproval.
    - Construction planner tool highlights affected ghosts using red outline (similar to what other vanilla planners do) instead of green.
    - Base game version requirement bumped to 1.1.86.
  Bugfixes:
    - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2022-10-19
  Changes:
    - Deconstruction planners from library no longer deconstruct unapproved ghosts.
  Bugfixes:
    - Fixed crash when player deconstructs area with deconstruction planner from game/player library due to mismatch between deconstruction force and player force.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-08-08
  Bugfixes:
    - Fixed crash when player places a bluperint using blueprint book from inventory.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-08-07
  Bugfixes:
    - Fixed placeholders staying behind when canceling deconstruction of entities that do not overlap with the placeholder entity itself.
    - Fixed placeholders staying behind when "quick-building" rails.
    - Fixed undo queue with unapproved ghosts not being preserved correctly when canceling deconstruction.
---------------------------------------------------------------------------------------------------
Version: 1.3.0